--- a/bank-frontend/src/app/safe-page/safe-page.component.html
+++ b/bank-frontend/src/app/safe-page/safe-page.component.html
@@ -1,15 +1,14 @@
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
 <caption>Safes</caption>
-  <!-- Position Column -->
+
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef> Name </th>
     <td mat-cell *matCellDef="let element"> {{element.name}} </td>
   </ng-container>
 
-  <!-- Name Column -->
   <ng-container matColumnDef="button">
-    <th mat-header-cell *matHeaderCellDef></th>
+    <th mat-header-cell *matHeaderCellDef>Button</th>
     <td mat-cell *matCellDef="let element" > <button mat-raised-button color="primary" (click)="viewSafe(element)">View Safe</button> </td>
   </ng-container>
 
@@ -17,3 +16,5 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+
+<button mat-raised-button color="primary" (click)="createSafe()">Create New Safe</button>
