--- a/bank-frontend/src/app/welcome-page/welcome-page.component.html
+++ b/bank-frontend/src/app/welcome-page/welcome-page.component.html
@@ -13,9 +13,9 @@
   <span class="welcome_text">Choose from:</span>
 </p>
 <p class="button-row">
-  <button mat-raised-button color="primary">View Account</button>
-  <button mat-raised-button color="accent">Transactions</button>
-  <button mat-raised-button color="warn">Safes</button>
+  <button mat-raised-button color="primary" [routerLink]="['../login']">View Account</button>
+  <button mat-raised-button color="accent" [routerLink]="['../login']">Transactions</button>
+  <button mat-raised-button color="warn" (click)="navigateToSafesPage()" >Safes</button>
 </p>
 </div>
 
