--- a/bank-frontend/src/styles.css
+++ b/bank-frontend/src/styles.css
@@ -1,3 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import '@angular/material/prebuilt-themes/indigo-pink.css';
 
+html{
+  background: linear-gradient(90deg, #20A4F3, #182B3A);
+}
+
