--- a/bank-frontend/src/app/signup/signup.component.css
+++ b/bank-frontend/src/app/signup/signup.component.css
@@ -7,7 +7,8 @@
 }
 mat-card{
   min-width: 40%;
-  background-color: lightblue;
+  background: linear-gradient(90deg, #f7fafc, lightblue);;
+  box-shadow: 0 8px 10px #66696b;
 }
 
 mat-card-header{
