--- a/bank-frontend/src/app/create-safe/create-safe.component.html
+++ b/bank-frontend/src/app/create-safe/create-safe.component.html
@@ -15,7 +15,7 @@
 
   <mat-form-field>
     <mat-label>Initial funds</mat-label>
-    <textarea matInput id="initialFunds" formControlName="initialFunds"></textarea>
+    <input matInput id="initialFunds" formControlName="initialFunds">
     <mat-error *ngIf="this.safeForm.get('initialFunds')?.hasError('required')">Initial funds is required</mat-error>
 
   </mat-form-field>
