--- a/bank-frontend/src/app/login-user/login-user.component.html
+++ b/bank-frontend/src/app/login-user/login-user.component.html
@@ -12,7 +12,7 @@
         <mat-form-field>
           <mat-label>Password:</mat-label>
           <input matInput name="password" type="password" required formControlName="password">
-          <mat-error *ngIf="this.loginForm.get('password')?.hasError('pattern')">Password must be valid</mat-error>
+<!--          <mat-error *ngIf="this.loginForm.get('password')?.hasError('pattern')">Password must be valid</mat-error>-->
         </mat-form-field>
       </div>
       <div>
