--- a/bank-frontend/src/app/show-safe/show-safe.component.html
+++ b/bank-frontend/src/app/show-safe/show-safe.component.html
@@ -13,7 +13,7 @@
 
   <ng-container matColumnDef="update_btn">
     <th mat-header-cell *matHeaderCellDef></th>
-    <td mat-cell *matCellDef="let element" > <button mat-raised-button color="primary" (click)="updateSafe(element)">UpdateSafe</button> </td>
+    <td mat-cell *matCellDef="let element" > <button mat-raised-button color="primary" (click)="updateSafe(element)">Add money</button> </td>
   </ng-container>
 
   <ng-container matColumnDef="delete_btn">
