--- a/bank-frontend/src/app/safe-page/safe-page.component.html
+++ b/bank-frontend/src/app/safe-page/safe-page.component.html
@@ -1,3 +1,12 @@
+<p>
+  <mat-toolbar id="header">
+    <span id="header_toolbar">Online Banking System</span>
+    <span class="spacer"></span>
+    <button mat-fab extended="" color="primary" class="header-btn" ><a [routerLink]="['/welcomePage']">Back</a></button>
+    <button  mat-fab extended="" color="primary" class="header-btn" (click)="logOut()" >Log Out</button>
+  </mat-toolbar>
+</p>
+
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
 <caption>Safes</caption>
