--- a/bank-frontend/src/app/welcome-page/welcome-page.component.html
+++ b/bank-frontend/src/app/welcome-page/welcome-page.component.html
@@ -2,8 +2,8 @@
   <mat-toolbar id="header">
     <span id="header_toolbar">Online Banking System</span>
     <span class="spacer"></span>
-    <button mat-fab extended="" color="primary" class="header-btn">Profile</button>
-    <button  mat-fab extended="" color="primary" class="header-btn">Log Out</button>
+    <button mat-fab extended="" color="primary" class="header-btn" (click)="navigateToProfile()">Profile</button>
+    <button  mat-fab extended="" color="primary" class="header-btn" (click)="logOut()" >Log Out</button>
   </mat-toolbar>
 </p>
 
