--- a/bank-frontend/src/app/transactions-page/transactions-page.component.html
+++ b/bank-frontend/src/app/transactions-page/transactions-page.component.html
@@ -1,11 +1,4 @@
-<p>
-  <mat-toolbar id="header">
-    <span id="header_toolbar">Online Banking System</span>
-    <span class="spacer"></span>
-    <button mat-fab extended="" color="primary" class="header-btn" ><a [routerLink]="['/welcomePage']">Back</a></button>
-    <button  mat-fab extended="" color="primary" class="header-btn" (click)="logOut()" >Log Out</button>
-  </mat-toolbar>
-</p>
+<app-header></app-header>
 
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
