--- a/bank-frontend/src/app/admin-page/admin-page.component.html
+++ b/bank-frontend/src/app/admin-page/admin-page.component.html
@@ -1,1 +1,102 @@
-<app-header></app-header>
+<p>
+  <mat-toolbar id="header">
+    <span id="header_toolbar">Online Banking System</span>
+    <span class="spacer"></span>
+    <button mat-fab extended="" class="header-btn" ><a [routerLink]="['/welcomePage']">Back</a></button>
+    <button  mat-fab extended=""  class="header-btn" (click)="logOut()" >Logout</button>
+  </mat-toolbar>
+</p>
+
+    <div class="user_info" [formGroup]="adminForm">
+      <mat-card class="example-card">
+        <mat-card-header>
+          <mat-card-title-group>
+            <mat-card-title>User</mat-card-title>
+          </mat-card-title-group>
+        </mat-card-header>
+        <mat-card-content>
+          <label for="email">Enter EMAIL:</label>
+          <input type="text" id="email" required formControlName="email"/>
+          <button (click)="getBankUser()">Get User Info</button>
+        </mat-card-content>
+        <mat-card-content>
+          <h3>Information</h3>
+          <mat-list>
+            <mat-list-item>
+              <span matListItemTitle>Username</span>
+              <span matListItemLine>{{user.username}}</span>
+            </mat-list-item>
+            <mat-list-item>
+              <span matListItemTitle>Email</span>
+              <span matListItemLine>{{user.email}}</span>
+            </mat-list-item>
+            <mat-list-item>
+              <span matListItemTitle>Country</span>
+              <span matListItemLine>{{user.country}}</span>
+            </mat-list-item>
+          </mat-list>
+        </mat-card-content>
+      </mat-card>
+    </div>
+    <div class="account_info" [formGroup]="adminForm">
+      <mat-card class="example-card">
+        <mat-card-header>
+          <mat-card-title-group>
+            <mat-card-title>User</mat-card-title>
+          </mat-card-title-group>
+        </mat-card-header>
+        <mat-card-content>
+          <label for="account">Enter EMAIL:</label>
+          <input type="text" id="account" required formControlName="email"/>
+          <button (click)="getAccount()">Get Account Info</button>
+        </mat-card-content>
+        <mat-card-content>
+          <h3>Information</h3>
+          <mat-list>
+            <mat-list-item>
+              <span matListItemTitle>Username</span>
+              <span matListItemLine>{{user.username}}</span>
+            </mat-list-item>
+            <mat-list-item>
+              <span matListItemTitle>Email</span>
+              <span matListItemLine>{{user.email}}</span>
+            </mat-list-item>
+            <mat-list-item>
+              <span matListItemTitle>Country</span>
+              <span matListItemLine>{{user.country}}</span>
+            </mat-list-item>
+          </mat-list>
+        </mat-card-content>
+      </mat-card>
+    </div>
+    <div class="card_info" [formGroup]="adminForm">
+      <mat-card class="example-card">
+        <mat-card-header>
+          <mat-card-title-group>
+            <mat-card-title>Debit Card</mat-card-title>
+          </mat-card-title-group>
+        </mat-card-header>
+        <mat-card-content>
+          <label for="iban">Enter IBAN:</label>
+          <input type="text" id="iban" required formControlName="iban" />
+          <button (click)="getBankCard()">Get Card Info</button>
+        </mat-card-content>
+        <mat-card-content>
+          <h3>Information</h3>
+          <mat-list>
+            <mat-list-item>
+              <span matListItemTitle>Number</span>
+              <span matListItemLine>{{card.number}}</span>
+            </mat-list-item>
+            <mat-list-item>
+              <span matListItemTitle>Expiry Date</span>
+              <span matListItemLine>{{card.expiryDate}}</span>
+            </mat-list-item>
+            <mat-list-item>
+              <span matListItemTitle>CVV</span>
+              <span matListItemLine>{{card.cvv}}</span>
+            </mat-list-item>
+          </mat-list>
+        </mat-card-content>
+      </mat-card>
+    </div>
