--- a/bank-frontend/src/app/profile-page/profile-page.component.html
+++ b/bank-frontend/src/app/profile-page/profile-page.component.html
@@ -2,8 +2,8 @@
     <mat-toolbar id="header">
         <span id="header_toolbar">Online Banking System</span>
         <span class="spacer"></span>
-        <button mat-fab extended="" color="primary" class="header-btn" ><a [routerLink]="['/welcomePage']" >Back</a></button>
-        <button  mat-fab extended="" color="primary" class="header-btn" (click)="logOut()" >Log Out</button>
+        <button mat-fab extended=""  class="header-btn" ><a [routerLink]="['/welcomePage']" >Back</a></button>
+        <button  mat-fab extended=""  class="header-btn" (click)="logOut()" >Log Out</button>
     </mat-toolbar>
 </p>
 
