--- a/bank-frontend/src/app/transactions-page/transactions-page.component.css
+++ b/bank-frontend/src/app/transactions-page/transactions-page.component.css
@@ -1,3 +1,24 @@
+.spacer {
+  flex: 1 1 auto;
+}
+
+.header-btn {
+  margin: 10px;
+  cursor: pointer;
+  background-color: white;
+  color: #182B3A;/* Add this to make the text cursor on hover */
+}
+#header {
+  background: linear-gradient(90deg,  lightblue, #717676);
+  display: flex;
+  justify-content: space-between; /* Align items horizontally */
+  padding: 10px; /* Adjust padding for better appearance */
+}
+
+#header_toolbar {
+  font-size: 20px; /* Adjust font size if needed */
+}
+
 .button-row {
   display: flex;
 }
