--- a/bank-frontend/src/app/transactions-page/transactions-page.component.html
+++ b/bank-frontend/src/app/transactions-page/transactions-page.component.html
@@ -1,4 +1,12 @@
-<app-header></app-header>
+<p>
+  <mat-toolbar id="header">
+    <span id="header_toolbar">Online Banking System</span>
+    <span class="spacer"></span>
+    <button mat-fab extended="" class="header-btn" ><a [routerLink]="['/welcomePage']"> Back </a></button>
+    <button  mat-fab extended=""  class="header-btn" (click)="logOut()" > Logout </button>
+  </mat-toolbar>
+</p>
+
 
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
