--- a/bank-frontend/src/app/admin-page/admin-page.component.css
+++ b/bank-frontend/src/app/admin-page/admin-page.component.css
@@ -25,3 +25,32 @@
 #header_toolbar {
   font-size: 20px; /* Adjust font size if needed */
 }
+.cards-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  width: 49%; /* Adjust as needed, leaving some space for margins/padding */
+  margin-bottom: 2%; /* Adjust as needed */
+}
+
+.card {
+  width: 100%;
+}
+
+.content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: 2%;
+}
+
+.user-info,
+.account-info,
+.card-info {
+  width: 100%; /* Adjust as needed */
+}
