--- a/bank-frontend/src/app/admin-page/admin-page.component.html
+++ b/bank-frontend/src/app/admin-page/admin-page.component.html
@@ -2,101 +2,138 @@
   <mat-toolbar id="header">
     <span id="header_toolbar">Online Banking System</span>
     <span class="spacer"></span>
-    <button mat-fab extended="" class="header-btn" ><a [routerLink]="['/welcomePage']">Back</a></button>
-    <button  mat-fab extended=""  class="header-btn" (click)="logOut()" >Logout</button>
+    <button mat-fab extended="" class="header-btn"><a [routerLink]="['/welcomePage']">Back</a></button>
+    <button mat-fab extended="" class="header-btn" (click)="logOut()">Logout</button>
   </mat-toolbar>
 </p>
-
-    <div class="user_info" [formGroup]="adminForm">
-      <mat-card class="example-card">
-        <mat-card-header>
-          <mat-card-title-group>
-            <mat-card-title>User</mat-card-title>
-          </mat-card-title-group>
-        </mat-card-header>
-        <mat-card-content>
-          <label for="email">Enter EMAIL:</label>
-          <input type="text" id="email" required formControlName="email"/>
-          <button (click)="getBankUser()">Get User Info</button>
-        </mat-card-content>
-        <mat-card-content>
-          <h3>Information</h3>
-          <mat-list>
-            <mat-list-item>
-              <span matListItemTitle>Username</span>
-              <span matListItemLine>{{user.username}}</span>
-            </mat-list-item>
-            <mat-list-item>
-              <span matListItemTitle>Email</span>
-              <span matListItemLine>{{user.email}}</span>
-            </mat-list-item>
-            <mat-list-item>
-              <span matListItemTitle>Country</span>
-              <span matListItemLine>{{user.country}}</span>
-            </mat-list-item>
-          </mat-list>
-        </mat-card-content>
-      </mat-card>
-    </div>
-    <div class="account_info" [formGroup]="adminForm">
-      <mat-card class="example-card">
-        <mat-card-header>
-          <mat-card-title-group>
-            <mat-card-title>User</mat-card-title>
-          </mat-card-title-group>
-        </mat-card-header>
-        <mat-card-content>
-          <label for="account">Enter EMAIL:</label>
-          <input type="text" id="account" required formControlName="email"/>
-          <button (click)="getAccount()">Get Account Info</button>
-        </mat-card-content>
-        <mat-card-content>
-          <h3>Information</h3>
-          <mat-list>
-            <mat-list-item>
-              <span matListItemTitle>Username</span>
-              <span matListItemLine>{{user.username}}</span>
-            </mat-list-item>
-            <mat-list-item>
-              <span matListItemTitle>Email</span>
-              <span matListItemLine>{{user.email}}</span>
-            </mat-list-item>
-            <mat-list-item>
-              <span matListItemTitle>Country</span>
-              <span matListItemLine>{{user.country}}</span>
-            </mat-list-item>
-          </mat-list>
-        </mat-card-content>
-      </mat-card>
-    </div>
-    <div class="card_info" [formGroup]="adminForm">
-      <mat-card class="example-card">
-        <mat-card-header>
-          <mat-card-title-group>
-            <mat-card-title>Debit Card</mat-card-title>
-          </mat-card-title-group>
-        </mat-card-header>
-        <mat-card-content>
-          <label for="iban">Enter IBAN:</label>
-          <input type="text" id="iban" required formControlName="iban" />
-          <button (click)="getBankCard()">Get Card Info</button>
-        </mat-card-content>
-        <mat-card-content>
-          <h3>Information</h3>
+<div class=" cards-container">
+  <div class="container" [formGroup]="ibanForm">
+    <mat-card class="card">
+      <mat-card-header>
+        <mat-card-title-group>
+          <mat-card-title>Debit Card</mat-card-title>
+        </mat-card-title-group>
+      </mat-card-header>
+      <mat-card-content>
+        <label for="iban">Enter IBAN:</label>
+        <input type="text" id="iban" required formControlName="iban"/>
+        <button (click)="getInfoByIban()">Get Card Info</button>
+      </mat-card-content>
+      <mat-card-content class="content">
+        <div class="card-info">
+          <h3> Card Information</h3>
           <mat-list>
             <mat-list-item>
               <span matListItemTitle>Number</span>
-              <span matListItemLine>{{card.number}}</span>
+              <span matListItemLine>{{ card.number }}</span>
             </mat-list-item>
             <mat-list-item>
               <span matListItemTitle>Expiry Date</span>
-              <span matListItemLine>{{card.expiryDate}}</span>
+              <span matListItemLine>{{ card.expiryDate }}</span>
             </mat-list-item>
             <mat-list-item>
               <span matListItemTitle>CVV</span>
-              <span matListItemLine>{{card.cvv}}</span>
+              <span matListItemLine>{{ card.cvv }}</span>
             </mat-list-item>
           </mat-list>
-        </mat-card-content>
-      </mat-card>
-    </div>
+        </div>
+      </mat-card-content>
+      <mat-card-content class="content">
+        <div class="card-info">
+          <h3> Safe Information</h3>
+          <mat-list *ngFor="let safe of safesCards">
+            <mat-list-item>
+              <span matListItemTitle>Safe name</span>
+              <span matListItemLine >{{ safe.name }}</span>
+            </mat-list-item>
+            <mat-list-item>
+              <span matListItemTitle>Safe key</span>
+              <span matListItemLine>{{ safe.key }}</span>
+            </mat-list-item>
+            <mat-list-item>
+              <span matListItemTitle>Initial funds</span>
+              <span matListItemLine>{{ safe.initialFunds}}</span>
+            </mat-list-item>
+          </mat-list>
+        </div>
+      </mat-card-content>
+      <mat-card-content class="content">
+        <div class="transaction-info">
+          <h3> Transaction Information</h3>
+          <mat-list *ngFor="let transaction of transactions">
+            <mat-list-item>
+              <span matListItemTitle>Sent amount</span>
+              <span matListItemLine >{{ transaction.sentAmount}}</span>
+            </mat-list-item>
+            <mat-list-item>
+              <span matListItemTitle>Receiver iban</span>
+              <span matListItemLine>{{ transaction.receiverIban }}</span>
+            </mat-list-item>
+            <mat-list-item>
+              <span matListItemTitle>Reason</span>
+              <span matListItemLine>{{ transaction.reason}}</span>
+            </mat-list-item>
+            <mat-list-item>
+              <span matListItemTitle>Issue data</span>
+              <span matListItemLine>{{ transaction.issueDate}}</span>
+            </mat-list-item>
+          </mat-list>
+        </div>
+      </mat-card-content>
+    </mat-card>
+  </div>
+<div class="container" [formGroup]="emailForm">
+  <mat-card class="card">
+    <mat-card-header>
+      <mat-card-title-group>
+        <mat-card-title>User and Account Info</mat-card-title>
+      </mat-card-title-group>
+    </mat-card-header>
+    <mat-card-content>
+      <label for="email">Enter EMAIL:</label>
+      <input type="text" id="email" required formControlName="email"/>
+      <button (click)="getInfoByEmail()">Get User Info</button>
+    </mat-card-content>
+    <mat-card-content class="card-content">
+      <div class="user-info">
+        <h3>User Information</h3>
+        <mat-list>
+          <mat-list-item>
+            <span matListItemTitle>Username</span>
+            <span matListItemLine>{{ user.username }}</span>
+          </mat-list-item>
+          <mat-list-item>
+            <span matListItemTitle>Email</span>
+            <span matListItemLine>{{ user.email }}</span>
+          </mat-list-item>
+          <mat-list-item>
+            <span matListItemTitle>Country</span>
+            <span matListItemLine>{{ user.country }}</span>
+          </mat-list-item>
+        </mat-list>
+      </div>
+    </mat-card-content>
+    <mat-card-content class="card-content">
+      <div class="account-info">
+        <h3>Account Information</h3>
+        <mat-list>
+          <mat-list-item>
+            <span matListItemTitle>Iban</span>
+            <span matListItemLine>{{ account.iban }}</span>
+          </mat-list-item>
+          <mat-list-item>
+            <span matListItemTitle>Available amount</span>
+            <span matListItemLine>{{ account.availableAmount }}</span>
+          </mat-list-item>
+          <mat-list-item>
+            <span matListItemTitle>Credit amount</span>
+            <span matListItemLine>{{ account.creditAmount }}</span>
+          </mat-list-item>
+        </mat-list>
+      </div>
+    </mat-card-content>
+  </mat-card>
+</div>
+
+</div>
+
