--- a/bank-frontend/src/styles.css
+++ b/bank-frontend/src/styles.css
@@ -5,3 +5,6 @@ html{
   background: linear-gradient(90deg, #20A4F3, #182B3A);
 }
 
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
