--- a/bank-frontend/src/app/transactions-page/transactions-page.component.html
+++ b/bank-frontend/src/app/transactions-page/transactions-page.component.html
@@ -10,7 +10,7 @@
 
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-  <caption>Safes</caption>
+  <caption>Transactions</caption>
 
   <ng-container matColumnDef="sentAmount">
     <th mat-header-cell *matHeaderCellDef> Sent Amount </th>
