--- a/bank-frontend/src/styles.css
+++ b/bank-frontend/src/styles.css
@@ -1,6 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 @import '@angular/material/prebuilt-themes/indigo-pink.css';
 
+html{
+  background: linear-gradient(90deg, #20A4F3, #182B3A);
+}
+
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
