--- a/bank-frontend/src/app/login/login-admin/login-admin.component.css
+++ b/bank-frontend/src/app/login/login-admin/login-admin.component.css
@@ -1,4 +1,5 @@
-.login-main{
+
+.login-admin{
   margin-top: 5%;
   text-align: center;
   display: flex;
@@ -7,7 +8,8 @@
 }
 mat-card{
   min-width: 50%;
-  background-color: lightblue;
+  background: linear-gradient(90deg, #f7fafc, lightblue);
+  box-shadow: 0 8px 10px #66696b;
 }
 
 mat-card-header{
