--- a/bank-frontend/src/app/login/login-user/login-user.component.css
+++ b/bank-frontend/src/app/login/login-user/login-user.component.css
@@ -6,7 +6,7 @@
   align-items: center;
 }
 mat-card{
-  min-width: 40%;
+  min-width: 50%;
   background: linear-gradient(90deg, #f7fafc, lightblue);;
   box-shadow: 0 8px 10px #66696b;
 }
@@ -26,10 +26,11 @@ h1, h2{
 }
 
 mat-form-field {
+  /*display: block;*/
   margin-bottom: 5px;
   margin-left: 10px;
   margin-right: 10px;
-  width: 60%;
+  width: 90%;
   justify-content: center;
   align-items: center;
 }
@@ -38,10 +39,6 @@ form {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-button{
-  width: 180px;
 }
 
 .error-message{
