--- a/bank-frontend/src/app/transactions-page/transactions-page.component.css
+++ b/bank-frontend/src/app/transactions-page/transactions-page.component.css
@@ -1,21 +1,15 @@
-.button-row {
-  display: flex;
-}
-button{
-  margin: 1%;
-}
-
 .spacer {
   flex: 1 1 auto;
 }
 
 .header-btn {
   margin: 10px;
-  cursor: pointer; /* Add this to make the text cursor on hover */
+  cursor: pointer;
+  background-color: white;
+  color: #182B3A;/* Add this to make the text cursor on hover */
 }
-
 #header {
-  background: darkorange;
+  background: linear-gradient(90deg,  lightblue, #717676);
   display: flex;
   justify-content: space-between; /* Align items horizontally */
   padding: 10px; /* Adjust padding for better appearance */
@@ -23,4 +17,11 @@ button{
 
 #header_toolbar {
   font-size: 20px; /* Adjust font size if needed */
+}
+
+.button-row {
+  display: flex;
+}
+button{
+  margin: 1%;
 }
