--- a/bank-frontend/src/app/transactions-page/transactions-page.component.html
+++ b/bank-frontend/src/app/transactions-page/transactions-page.component.html
@@ -2,14 +2,15 @@
   <mat-toolbar id="header">
     <span id="header_toolbar">Online Banking System</span>
     <span class="spacer"></span>
-    <button mat-fab extended="" color="primary" class="header-btn" ><a [routerLink]="['/welcomePage']">Back</a></button>
-    <button  mat-fab extended="" color="primary" class="header-btn" (click)="logOut()" >Log Out</button>
+    <button mat-fab extended="" class="header-btn" ><a [routerLink]="['/welcomePage']"> Back </a></button>
+    <button  mat-fab extended=""  class="header-btn" (click)="logOut()" > Logout </button>
   </mat-toolbar>
 </p>
 
+
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-  <caption>Safes</caption>
+  <caption>Transactions</caption>
 
   <ng-container matColumnDef="sentAmount">
     <th mat-header-cell *matHeaderCellDef> Sent Amount </th>
