--- a/bank-frontend/src/app/transactions-page/transactions-page.component.html
+++ b/bank-frontend/src/app/transactions-page/transactions-page.component.html
@@ -27,6 +27,11 @@
     <td mat-cell *matCellDef="let element"> {{element.reason}} </td>
   </ng-container>
 
+  <ng-container matColumnDef="issueDate">
+    <th mat-header-cell *matHeaderCellDef> Issue date </th>
+    <td mat-cell *matCellDef="let element"> {{element.issueDate}} </td>
+  </ng-container>
+
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
