--- a/bank-frontend/src/app/profile-page/profile-page.component.html
+++ b/bank-frontend/src/app/profile-page/profile-page.component.html
@@ -34,4 +34,4 @@
     </mat-card>
 
 </div>
-<button mat-raised-button color="primary" (click)="updateUser()">Send Money</button>
+<button mat-raised-button color="primary" (click)="updateUser()">Update user details </button>
