--- a/bank-frontend/src/app/admin-page/admin-page.component.html
+++ b/bank-frontend/src/app/admin-page/admin-page.component.html
@@ -128,7 +128,7 @@
 
             <p>
               <span matListItemTitle>Issue data</span>
-              <span matListItemLine>{{ transaction?.issueDate }}</span>
+              <span matListItemLine>{{ transaction?.issueDate | date: 'yyyy-MM-dd HH:mm:ss'}}</span>
             </p>
           </mat-list-item>
         </mat-list>
