--- a/bank-frontend/src/app/admin-page/admin-page.component.css
+++ b/bank-frontend/src/app/admin-page/admin-page.component.css
@@ -1,10 +1,3 @@
-/*.main-part{*/
-/*  margin: 10%;*/
-/*  display: flex;*/
-/*  flex-direction: column;*/
-/*  align-items: center;*/
-/*}*/
-
 .spacer {
   flex: 1 1 auto;
 }
@@ -13,21 +6,21 @@
   margin: 10px;
   cursor: pointer;
   background-color: white;
-  color: #182B3A;/* Add this to make the text cursor on hover */
+  color: #182B3A;
 }
 #header {
   background: linear-gradient(90deg,  lightblue, #717676);
   display: flex;
-  justify-content: space-between; /* Align items horizontally */
-  padding: 10px; /* Adjust padding for better appearance */
+  justify-content: space-between;
+  padding: 10px;
 }
 
 #header_toolbar {
-  font-size: 20px; /* Adjust font size if needed */
+  font-size: 20px;
 }
 .cards-container {
   display: flex;
-  flex-direction: column; /* Change to column */
+  flex-direction: column;
   align-items: center;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -36,7 +29,7 @@
 .container {
   display: flex;
   justify-content: center;
-  width: 49%; /* Adjust as needed, leaving some space for margins/padding */
+  width: 49%;
   margin-bottom: 2%;
 
 }
@@ -56,5 +49,38 @@
 .user-info,
 .account-info,
 .card-info {
-  width: 100%; /* Adjust as needed */
+  width: 100%;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.button-container button {
+  margin: 0 30px;
+}
+
+.create{
+  background: linear-gradient(90deg, lightblue, darkblue );
+
+}
+.delete{
+  background: linear-gradient(90deg, red, darkred);
+}
+.info-message {
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  background-color: #dff0d8;
+  color: #3c763d;
+  padding: 15px;
+  width: 50%;
+  border: 1px solid #d6e9c6;
+  border-radius: 0;
 }
