--- a/bank-frontend/src/app/login/login-user/login-user.component.html
+++ b/bank-frontend/src/app/login/login-user/login-user.component.html
@@ -23,5 +23,6 @@
     </form>
     <br>
     <p>Don't have an account? <a [routerLink]="['../signup']">Sign up</a></p>
+    <p>You are an administrator? <a [routerLink]="['../loginAdmin']">Go to Admin login</a></p>
   </mat-card>
 </div>
