--- a/bank-frontend/src/app/welcome-page/welcome-page.component.html
+++ b/bank-frontend/src/app/welcome-page/welcome-page.component.html
@@ -2,9 +2,8 @@
   <mat-toolbar id="header">
     <span id="header_toolbar">Online Banking System</span>
     <span class="spacer"></span>
-    <button mat-fab extended="" color="primary" class="header-btn" (click)="navigateToProfile()">{{'👥'}}</button>
-    <button  mat-fab extended="" color="primary" class="header-btn" (click)="logOut()" >{{'… 🚶‍♀️‍➡️ …'}}</button>
-    <button mat-fab  extended=""  color="primary" class="header-btn" [routerLink]="['../loginAdmin']">{{ '👨‍💻' }}</button>
+    <button mat-fab extended="" color="primary" class="header-btn" (click)="navigateToProfile()">{{'Go to Profile👥'}}</button>
+    <button  mat-fab extended="" color="primary" class="header-btn" (click)="logOut()" >{{'LogOut️‍➡️'}}</button>
   </mat-toolbar>
 </p>
 
