--- a/bank-frontend/src/app/profile-page/profile-page.component.html
+++ b/bank-frontend/src/app/profile-page/profile-page.component.html
@@ -34,4 +34,8 @@
     </mat-card>
 
 </div>
-<button mat-raised-button color="primary" (click)="updateUser()">Update user details </button>
+
+<div class=" update-button">
+  <button mat-raised-button   color="primary" (click)="updateUser()">Update user details </button>
+</div>
+
