--- a/bank-frontend/src/app/welcome-page/welcome-page.component.css
+++ b/bank-frontend/src/app/welcome-page/welcome-page.component.css
@@ -2,8 +2,21 @@
   flex: 1 1 auto;
 }
 
-#header{
-  background: darkorange;
+.header-btn {
+  margin: 10px;
+  cursor: pointer;
+  background-color: white;
+  color: #182B3A;
+}
+#header {
+  background: linear-gradient(90deg,  lightblue, #717676);
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+}
+
+#header_toolbar {
+  font-size: 20px;
 }
 
 .main-part{
