--- a/bank-frontend/src/app/account-page/account-page.component.css
+++ b/bank-frontend/src/app/account-page/account-page.component.css
@@ -6,18 +6,18 @@
   margin: 10px;
   cursor: pointer;
   background-color: white;
-  color: #182B3A; /* Add this to make the text cursor on hover */
+  color: #182B3A;
 }
 
 #header {
   background: linear-gradient(90deg, lightblue, #717676);
   display: flex;
-  justify-content: space-between; /* Align items horizontally */
-  padding: 10px; /* Adjust padding for better appearance */
+  justify-content: space-between;
+  padding: 10px;
 }
 
 #header_toolbar {
-  font-size: 20px; /* Adjust font size if needed */
+  font-size: 20px;
 }
 
 .account-container {
