Add validation for 0

--- a/bank-frontend/src/app/account-page/account-page.component.html
+++ b/bank-frontend/src/app/account-page/account-page.component.html
@@ -10,7 +10,7 @@
 
   <div class="account_info">
     <mat-card class="example-card">
-      <mat-card-header>
+      <mat-card-header class="center">
         <mat-card-title-group>
           <mat-card-title>Account</mat-card-title>
         </mat-card-title-group>
@@ -19,7 +19,7 @@
         <h3>Information</h3>
         <mat-list>
           <mat-list-item>
-            <span matListItemTitle>Iban</span>
+            <span matListItemTitle>IBAN</span>
             <span matListItemLine>{{ account.iban }}</span>
           </mat-list-item>
           <mat-list-item>
