--- a/bank-frontend/src/app/admin-page/admin-page.component.html
+++ b/bank-frontend/src/app/admin-page/admin-page.component.html
@@ -42,7 +42,7 @@
           <h3>Account Information</h3>
           <mat-list>
             <mat-list-item>
-              <span matListItemTitle>Iban</span>
+              <span matListItemTitle>IBAN</span>
               <span matListItemLine>{{ account?.iban }}</span>
             </mat-list-item>
             <mat-list-item>
